[package]
name = "sqlstitch"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/yshrsmz/sqlstitch"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
sqlparser = "0.52.0"
petgraph = "0.6.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
